# RCC

./: .gitignore  AST-PROCESS.md  CURRENT.md  Cargo.toml  MICRO-C-GRAMMAR.md  MOCK-HLIR.ron  README.md  ROADMAP.md  build.py  build.sh  example_ast.ron  main
_c_test_files/: comments_and_functions.c  const_ptr.c  for_dev_debug.c  sizeof.c
_c_test_files/output_tests/: array_access.c  fizz_buzz.c  fizz_buzz.expected_output  malloc_int.c  string_ptr.c  struct_malloc.c  struct_malloc.expected_output  struct_member.c  struct_member.expected_output
_c_test_files/should_fail/: control_flow_analysis.c  declaration_in_expression.c  function_in_struct.c  if_in_condition.c
_c_test_files/should_succeed/: basic_blocks.c  const_ptr.c  control_flow_analysis.c  fuzz.c  member_access.c  pointer_member.c  sizeof.c  structs.c
_c_test_files/unit_tests/: variable_id_tracking.c
_process_docs/: AST-PROCESS.md  CASTING_SPEC.md  CODEGEN.md  DEVLOG.md  HOW-TO-USE.md  LEXING.md  MICRO-C-GRAMMAR.md  ROADMAP.md  SEMANTIC-ANALYSIS.md  STRING_LITERALS_CODEGEN.md
src/: ast.rs  ast_pretty_print.rs  error.rs  file.rs  hir.rs  hlir.rs  lex.rs  main.rs  parse.rs  str_intern.rs  tokens.rs  util.rs  validation.rs
src/analysis/: binary_expressions.rs  casting.rs  constant_folding.rs  control_flow.rs  declarations.rs  expressions.rs  flow.rs  folding.rs  functions.rs  hlir.rs  mlir.rs  mod.rs  statements.rs  symbols.rs
src/codegen/: binary_expressions.rs  declarations.rs  expressions.rs  literal_expressions.rs  lvals.rs  mod.rs  statements.rs
src/core/: error.rs  hlir.rs  mod.rs
(+30 files in other folders)
