workspace = { members = ["src/parser"] }
[package]
name = "microc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcstr = "1.1.5"
thiserror = "1.0.57"
derive-new = "0.6.0"
clap = "4.5.0"
lazy_static = "1.4.0"
rand = "0.8.5"
cranelift = "0.105.1"
serde = "1.0.197"
ron = "0.8.1"
log = "0.4.20"
