[features]
display_ast_during_tests = []
display_mlir_during_tests = []
display_llvm_graph_during_tests = []
display_internal_graphs_during_tests = []
output_lexer_during_tests = []
output_parser_during_tests = []
output_analyzer_during_tests = []
stop_at_lexer_during_tests = []
stop_at_parser_during_tests = []
stop_at_analyzer_during_tests = []

[package]
name = "microc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcstr = "1.1.5"
thiserror = "1.0.57"
derive-new = "0.6.0"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = "1.0.197"
ron = "0.8.1"
log = "0.4.20"
inkwell = { version = "0.4.0", features = ["llvm17-0"] }
clap = { version = "4.5.4", features = ["derive"] }
